--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Origin MMO</title>
+</head>
+<body>
+    <div id="app"></div>
+    <canvas id="game"></canvas>
+<script src="main.bundle.js?deefaaa1bcc3e56f86b3"></script></body>
+</html>
